<resources>
    <string name="app_name">GADSLeaderboard</string>
    <string name="page_title">LEADERBOARD</string>
    <string name="submit">Submit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="project_submission">Project Submission</string>
    <string name="label_firstname">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email Address</string>
    <string name="submit_success">Submission Successful</string>
    <string name="submit_error">Submission not Successful</string>
    <string name="project_on_github">Project on GITHUB (link)</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="yes">Yes</string>
</resources>